# LADy

./: .gitattributes  .gitignore  .gitmodules  Dockerfile  README.md  environment.yml  pyproject.toml  quickstart.ipynb  requirements.txt  ruff.toml  todo.txt
.github/workflows/: docker-publish.yml  docker-publish.yml.disabled  inclusive-tests-preps-toys-main.yml
data/augmentation/: All.back-translated.with-labels.csv  Arabic.back-translated.with-labels.csv  Chinese.back-translated.with-labels.csv  French.back-translated.with-labels.csv  German.back-translated.with-labels.csv  Spanish.back-translated.with-labels.csv
data/augmentation/back-translation/: D.arb.csv  D.csv  D.ell.csv  D.eng.csv  D.fra.csv  D.ita.csv  D.nld.csv  D.por.csv  D.spa.csv  D.tur.csv  D.zho.csv  D_arb.csv  D_deu.csv  D_ell.csv  D_eng.csv  D_fra.csv  D_rus.csv  D_spa.csv  D_tur.csv  D_zho.csv
data/augmentation/semantic-similarity/: D.D_arb.similarities.csv  D.D_deu.similarities.csv  D.D_fra.similarities.csv  D.D_spa.similarities.csv  D.D_zho.similarities.csv
data/augmentation/word-alignment/: D.D_arb.alignments.csv  D.D_deu.alignments.csv  D.D_fra.alignments.csv  D.D_spa.alignments.csv  D.D_zho.alignments.csv
data/raw/mams/: README.md  test.xml  train.xml
data/raw/semeval/: README.md  reviews.csv  toy.2016.txt  toy.txt
misc/: LADy-flow.pptx  UWillDiscover23.pptx  backtranslation-blue-em-sim-f1.xlsx  figures.pptx  lady-delta-0-100.pptx
output/: agg.pred.eval.mean-14-latptop.csv  agg.pred.eval.mean-14-res.csv  agg.pred.eval.mean-15.csv  lady-delta-0-100.pptx  stats.csv
output/2015SB12/: agg.pred.eval.mean.20.0.0.xlsx  agg.pred.eval.mean.20.all.0.0-1.0.xlsx
output/2016SB5/: agg.pred.eval.mean.20.0.0.xlsx  agg.pred.eval.mean.20.all.0.0-1.0.xlsx
output/English/Semeval-2016/: splits.json
output/French/Semeval-2016+/: reviews.pkl  splits.json
output/SemEval-14/Laptop/: agg.pred.eval.mean.0.0.xlsx  agg.pred.eval.mean.10.0.0.xlsx  agg.pred.eval.mean.10.all.0.0-1.0.xlsx  splits.json
output/SemEval-14/Restaurants/: agg.pred.eval.mean.0.0.xlsx  agg.pred.eval.mean.20.0.0.xlsx  agg.pred.eval.mean.20.all.0.0-1.0.xlsx  splits.json
output/augmentation/: German.back-translated.with-labels.csv
output/augmentation-R-14/augmented-with-labels/: All.back-translated.with-labels.csv  Arabic.back-translated.with-labels.csv  Chinese.back-translated.with-labels.csv  French.back-translated.with-labels.csv  German.back-translated.with-labels.csv  Spanish.back-translated.with-labels.csv
output/augmentation-R-14/back-translation/: D.arb.csv  D.csv  D.deu.csv  D.fra.csv  D.spa.csv  D.zho.csv  D_arb.csv  D_deu.csv  D_fra.csv  D_spa.csv  D_zho.csv
output/augmentation-R-14/semantic-similarity/: D.D_arb.similarities.csv  D.D_deu.similarities.csv  D.D_fra.similarities.csv  D.D_spa.similarities.csv  D.D_zho.similarities.csv
output/augmentation-R-14/word-alignment/: D.D_arb.alignments.csv  D.D_deu.alignments.csv  D.D_fra.alignments.csv  D.D_spa.alignments.csv  D.D_zho.alignments.csv
output/augmentation-R-15/augmented-with-labels/: All.back-translated.with-labels.csv  Arabic.back-translated.with-labels.csv  Chinese.back-translated.with-labels.csv  French.back-translated.with-labels.csv  German.back-translated.with-labels.csv  Spanish.back-translated.with-labels.csv
output/augmentation-R-15/back-translation/: D.arb.csv  D.csv  D.deu.csv  D.fra.csv  D.spa.csv  D.zho.csv  D_arb.csv  D_deu.csv  D_fra.csv  D_spa.csv  D_zho.csv
output/augmentation-R-16/back-translation/: D.arb.csv  (+10 more)
output/back-translation-metrics/: All-lang-average-sentences-tokens-R-['14', '15', '16'].csv  average-sentences-tokens-R-.14.15.16.csv  average-sentences-tokens-R-['14', '15', '16'].csv  back-translation-metrics-R-14.csv  back-translation-metrics-R-15.csv  back-translation-metrics-R-16.csv
output/semeval+/: stats.csv  stats_chart.csv
output/toy.2016SB5/: agg.ad.pred.eval.mean.csv  agg.pred.eval.mean.csv  reviews.arb_Arab.pkl  reviews.deu_Latn.pkl  reviews.fra_Latn.pkl  reviews.pes_Arab.pkl  reviews.pes_Arab.zho_Hans.deu_Latn.arb_Arab.fra_Latn.spa_Latn.pkl  reviews.pkl  reviews.zho_Hans.pkl  splits.json  stats.pkl
output/twitter/: agg.ad.pred.eval.mean.csv  agg.pred.eval.mean.25.0.0.xlsx  agg.pred.eval.mean.25.all.0.0-1.0.xlsx  reviews.deu_Latn.pkl  reviews.fra_Latn.pkl  reviews.pkl  reviews.zho_Hans.pkl  splits.json
src/: config.yaml  fast_sample_run.py  llm_experiment.py  main.py  main_dsg.py  main_exp.py  main_exp_slim.py  main_octis.py  main_plt.py  main_stat.py  main_web.py  params.py  utils.py  visualization.py
src/aml/: aspectmodeling.py  bert.py  bertopic.py  btm.py  ctm.py  fast.py  lda.py  mdl.py  neural.py  nrl.py  rnd.py
src/cmn/: lady2bert.py  mams.py  review.py  semeval.py  twitter.py
src/dal/: back_translation.py  distribution.py  join.py  labeling.py  metrics.py  plots.py  semantic_comparison.py  word_alignment.py
src/data_augmentation/: back_translation.py  word_alignment.py
src/dsg/: eval.py  filter.py  generate.py  llm.py  plot.py
src/helpercodes/: CIKM_publication_Tables_agg.py  LADy_pipeline_aggregation.py  agg2excel.py
src/llm/: aspect_extraction_pipeline.py  llm_config_handler.py  prompt_builder.py  summarize_trustworthiness_results.py  trustworthiness_check.py
tests/: ev_implicit_reviews.py  test.py  test_implicit_reviews.py
(+4058 files in other folders)
